# TestCode

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  requirements.txt
.github/: copilot-instructions.md
config/: setting.yaml
log/: log.txt
scripts/: auto_fight.py  game_helper_gui.py  key_api.py  test.py  tlbb.lua  tlbb.py  tmp.txt  打包流程.txt
scripts/tlbb/: LICENSE_SYSTEM_README.md  auto_return.py  color_detector.py  dig_seed.py  game_param.py  how_to_package.txt  img_match.py  keyboard_simulator.py  license_dialog.py  license_generator.py  license_manager.py  pkg_ui.spec  readme.txt  setup.iss  start_ui.py  start_ui.spec  txt_ocr.py  version_history.txt  window_manager.py
scripts/tlbb_auto_dig_seed/: game_helper.spec
src/: base.h  hybrid_a_star.cpp  hybrid_a_star.h  logger.h  main.cpp  qt_window.cpp  qt_window.h  test.py
src/utils/: base_func.h  common.h  logger.h  param.h  util_func.h  util_type.h
test/: data_set.py  note.py  plot_excel.py  test.py  utils.py
test/pred_path/searching_algorithm/: a_star.py  hybird_a_star.py  reeds_shepp.py  veh_kinematics.py  visualization.py
tlbb/: auto_return.py  color_detector.py  game_param.py  keyboard_simulator.py  license_manager.py  pkg_ui.spec  start_ui.py  styles.qss  sys_manager.py  test.py  version_history.txt  window_manager.py
tlbb/res/: how_to_package.txt  key_setting.yaml  version_history.txt
tlbb/src/: auto_return.py  game_param.py  keyboard_simulator.py  mouse_clicker.py  start_ui.py
